# business_card_reader

./: .gitignore  README.md  config.toml  database.py  image_processor.py  main.py  pyproject.toml  replit.nix  requirements.txt  text_parser.py
utils/: database.py  vision_parser.py
