[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "boto3>=1.36.14",
    "botocore>=1.36.14",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.37",
    "streamlit-cropper>=0.2.2",
    "streamlit>=1.42.0",
    "twilio>=9.4.4",
]
