[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.36.14",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "streamlit-cropper>=0.2.2",
    "streamlit>=1.42.0",
    "streamlit-modal>=0.1.0",
]
